--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,7 @@
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <link rel="stylesheet" href="https://use.typekit.net/nkc6amy.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-  <title>
-    <%= htmlWebpackPlugin.options.title %>
-  </title>
+  <title>2020 Revised - Ashton Design</title>
 </head>
 
 <body>
