--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,24 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta http-​equiv="ScreenOrientation" content="autoRotate:disabled">
+
+  <title>2020 Revised - Ashton Design</title>
+  <meta name="description" content="Some quick revisions could make a world of difference for the year ahead." />
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@ashtondesignllc" />
+  <meta property="og:site_name" content="2020 Revised - Ashton Design" />
+  <meta property="og:title" content="Revise your 2020!" />
+  <meta property="og:description" content="Some quick revisions could make a world of difference for the year ahead." />
+  <meta property="og:url" content="<%= BASE_URL %>" />
+  <meta property="og:image" content="<%= BASE_URL %>og-image.png" />
+  <meta property="og:type" content="website" />
+  <meta property="fb:app_id" content="632133200255157" />
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <link rel="stylesheet" href="https://use.typekit.net/nkc6amy.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-  <title>2020 Revised - Ashton Design</title>
 </head>
 
 <body>
