First round of revisions.

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta http-​equiv="ScreenOrientation" content="autoRotate:disabled">
 
   <title>2020 Revised - Ashton Design</title>
-  <meta name="description" content="Some quick revisions could make a world of difference for the year ahead." />
+  <meta name="description" content="Some quick edits could make a world of difference for the year ahead." />
   <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@ashtondesignllc" />
